--- a/package.json
+++ b/package.json
@@ -1,13 +1,14 @@
 {
   "name": "cominfo-client",
   "version": "1.0.0",
-  "main": "app.js",
-  "bin": "app.js",
+  "main": "build/app.js",
+  "bin": "build/app.js",
   "repository": "https://github.com/Team-IF/ComInFo-Client.git",
   "author": "Team IF <postmaster@teamif.io>",
   "license": "AGPL-3.0-or-later",
   "scripts": {
-    "build": "pkg . --targets linux-x64,win-x86,macos-x64 --out-path dist"
+    "build": "tsc && pkg . --targets linux-x64,win-x86,macos-x64 --out-path dist",
+    "dev": "tsc && node ."
   },
   "dependencies": {
     "@jedithepro/system-info": "^3.0.0",
@@ -16,6 +17,9 @@
     "os": "^0.1.1"
   },
   "devDependencies": {
-    "pkg": "^4.4.9"
+    "@types/cors": "^2.8.9",
+    "@types/express": "^4.17.11",
+    "pkg": "^4.4.9",
+    "typescript": "^4.1.3"
   }
 }
