--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,10 +28,5 @@ jobs:
         with:
             node-version: '12'
       
-      - uses: borales/actions-yarn@v2.0.0
-        with:
-            cmd: install
-
-      - uses: borales/actions-yarn@v2.0.0
-        with:
-            cmd: build
+      - run: yarn install
+      - run: yarn build
