--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "author": "Team IF <postmaster@teamif.io>",
   "license": "AGPL-3.0-or-later",
   "scripts": {
-    "build": "tsc && pkg . --targets linux-x64,win-x64,macos-x64 --out-path dist",
+    "build": "tsc && pkg . --targets win-x86,linux-x64,macos-x64 --out-path dist",
     "dev": "tsc && node ."
   },
   "dependencies": {
